# projetocg

./: .gitignore  CMakeLists.txt  black.hdr  blue.hdr  comparacao.txt  entrada.txt  entradaBezier.txt  ext1lagrange.exr  green.hdr  inputExample.txt  lpbom.hdr  output-lg.hdr  output-li.hdr  projetocg.sln  projetocg.vcxproj  projetocg.vcxproj.filters  qual.xlsx  red.hdr  script.ps1  test.p  white.hdr
artigo/: template.aux  template.bbl  template.bib  template.blg  template.tex
cmaketools/: FindFreeImage.cmake
src/: bezier.cpp  beziercubapproximator.cpp  beziercubapproximator.h  bezierquadapproximator.cpp  bezierquadapproximator.h  bsplineapproximator.cpp  bsplineapproximator.h  define.h  exec.cpp  exec.h  gaussianbackwardinterpolator.cpp  gaussianbackwardinterpolator.h  gaussianforwardinterpolator.cpp  gaussianforwardinterpolator.h  gaussinterpolator.cpp  gaussinterpolator.h  hdrfunctions.cpp  hdrfunctions.h  hdrimage.cpp  hdrimage.h  imagefunctions.cpp  imagefunctions.h  input.cpp  input.h  interpolation.cxx  interpolation.h  interpolator.h  lagrangeinterpolator.cpp  lagrangeinterpolator.h  linearinterpolator.cpp  linearinterpolator.h  main.cpp  math2.cpp  math2.h  naturalcubicsplineinterpolator.cpp  naturalcubicsplineinterpolator.h  pixelobserver.cpp  pixelobserver.h  quadraticinterpolator.cpp  quadraticinterpolator.h  (+2 more)
toi/: difference.txt
